--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -1,56 +1,85 @@
-.calculator {
-  width: 300px;
-  margin: 0 auto;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.calculator-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 8px;
+  padding: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.calculator-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #333;
   text-align: center;
+  margin-bottom: 16px;
 }
 
-.display {
-  margin-bottom: 10px;
+.calculator {
+  width: 320px;
+  height: 360px;
+  background-color: #e0e0e0;
+  border-radius: 8px;
 }
 
-input[type="text"] {
-  width: 92%;
-  padding: 10px;
+.calculator-display {
+  width: 96%;
+  height: 60px;
+  padding-right: 10px;
   font-size: 24px;
-  color: #fff;
-  margin-bottom: -10px;
+  font-weight: normal;
   text-align: right;
-  background-color: rgb(161, 161, 161);
+  color: white;
+  background-color: #858693;
+  border-radius: 8px 8px 0 0;
+  border: none;
+  outline: none;
 }
 
-.buttons {
+.calculator-buttons {
   display: grid;
   gap: 1px;
+  background-color: #e0e0e0;
+  border-radius: 0 0 8px 8px;
 }
 
 .row {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 1px;
+  display: flex;
+  justify-content: space-between;
+  gap: 4px;
+  margin-bottom: -4%;
+  padding: 8px;
 }
 
 button {
-  padding: 24px;
-  font-size: 20px;
+  width: 100%;
+  padding: 12px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  background-color: #f5f5f5;
   border: none;
   cursor: pointer;
+  transition: background-color 0.2s;
 }
 
-.number {
-  background-color: #f0f0f0;
-  font-size: 12px;
+button:hover {
+  background-color: #d1d1d1;
 }
 
 .operator {
-  background-color: #ff8d00;
-  color: #000;
-  font-size: 12px;
+  background-color: #f5913e;
+  color: white;
 }
 
-.zero {
-  grid-column: 1/3;
-  font-size: 12px;
+.double {
+  width: 250%;
 }
+
+button[value="+"],
+button[value="."] {
+  grid-column: span 1;
+}
+
+/* Add any additional styling as needed */
